--- a/manifest.json
+++ b/manifest.json
@@ -1,42 +1,62 @@
 {
-	"manifest_version":1,
-	"type":"WebApp",
-	"meta":{
-		"name":"Demo App",
-		"version":"1.0.0",
-		"minimum-overwolf-version":"0.77.10",
-		"author":"Developer Name",
-		"icon":"IconMouseOver.png",
-		"icon_gray":"IconMouseNormal.png",
-		"description":"Demo App"
+	"manifest_version": 1,
+	"type": "WebApp",
+	"meta": {
+		"name": "Demo App",
+		"version": "1.0.0",
+		"minimum-overwolf-version": "0.77.10",
+		"author": "Developer Name",
+		"icon": "IconMouseOver.png",
+		"icon_gray": "IconMouseNormal.png",
+		"description": "Demo App"
 	},
 	"data": {
-		"start_window":"MainWindow",
-		"windows":{
-			"MainWindow":{
-					"file":"Files/index.html",
-					"transparent": true,
-					"resizable": true,
-					"use_os_windowing": true,
-					"size": {
-						"width":700,
-						"height":400
-						},
-					"min_size": {
-						"width":400,
-						"height":400
-					}
+		"start_window": "MainWindow",
+		"game_targeting": {
+			"type": "dedicated",
+			"game_ids": [
+				5426
+			]
+		},
+		"game_events": [
+			5426
+		],
+		"launch_events": [
+			{
+				"event": "GameLaunch",
+				"event_data": {
+					"game_ids": [
+						5426
+					]
 				},
-			"SubWindow":{
-					"file":"Files/subwindow.html",
-					"transparent":true,
-					"resizable":false,
-					"size":{
-						"width":400,
-						"height":300
-					},
-					"in_game_only":true
+				"start_minimized": false
+			}
+		],
+		"windows": {
+			"MainWindow": {
+				"file": "Files/index.html",
+				"transparent": true,
+				"resizable": true,
+				"use_os_windowing": true,
+				"size": {
+					"width": 700,
+					"height": 400
+				},
+				"min_size": {
+					"width": 400,
+					"height": 400
 				}
+			},
+			"SubWindow": {
+				"file": "Files/subwindow.html",
+				"transparent": true,
+				"resizable": false,
+				"size": {
+					"width": 400,
+					"height": 300
+				},
+				"in_game_only": true
+			}
 		}
 	}
 }
